# ai-cv-pipeline

./: LICENSE  Makefile  README.md  docker-compose.yml
cv-chat-api/: main.py  pyproject.toml
cv-generation/: .env.template  .gitignore  README.md  generate.py  generate_pdfs.py  main.py  prompt.py  pyproject.toml  utils.py
cv-generation/ai_clients/: client.py
cv-generation/output/: generated_cv_1.json  generated_cv_10.json  generated_cv_11.json  generated_cv_12.json  generated_cv_13.json  generated_cv_14.json  generated_cv_15.json  generated_cv_16.json  generated_cv_17.json  generated_cv_2.json  generated_cv_3.json  generated_cv_4.json  generated_cv_5.json  generated_cv_6.json  generated_cv_7.json  generated_cv_8.json  generated_cv_9.json
cv-generation/templates/: cv.html
cv_chat_api/: .env.template  Dockerfile  Makefile  README.md  main.py  pyproject.toml
cv_chat_api/ai_clients/: client.py  genai.py  openai.py  perplexityai.py
cv_chat_api/embeddings_workflow/: chunk.py  embeddings.py  metadata.py  pdf_reader.py  workflow.py
cv_chat_api/search_workflow/: prompt.py  search.py
cv_chat_api/tests/: test_chunk.py  test_embeddings.py  test_pdf_reader.py
cv_chat_ui/: Dockerfile  index.html  package-lock.json  package.json
cv_chat_ui/src/: App.css  App.jsx  Chat.jsx
cv_chat_ui/src/clients/: chat-api.js
cv_generation/: .env.template  README.md  data_structures.py  generate_pdfs.py  main.py  prompt.py
cv_generation/ai_clients/: genai.py  openai.py
