[project]
name = "cv-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.59.0",
    "jinja2>=3.1.6",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "weasyprint>=67.0",
]
